scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,7 +129,6 @@ body {
   }
   body {
     @apply bg-background text-foreground;
-    overflow-y: scroll;
   }
 }
 
